--- a/index.html
+++ b/index.html
@@ -253,7 +253,7 @@
         </div>
         <div class="contact-form">
           <h2>contact us</h2>
-          <form action="">
+          <form action="https://formspree.io/f/xbjwpbrk" method="POST">
             <div class="form-group">
               <input
                 class="form-control"
@@ -274,7 +274,8 @@
                 rows="5"
               ></textarea>
             </div>
-            <a href="#" class="btn submit-btn">submit here</a>
+            <!-- button -->
+            <button type="submit" class="btn submit-btn">submit here</button>
           </form>
         </div>
       </div>
